# pysquared-UCubeSat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yaml  pyproject.toml  pysquared.code-workspace  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml
circuitpython-workspaces/: pyrightconfig.json
circuitpython-workspaces/flight-software/: pyproject.toml
circuitpython-workspaces/flight-software/src/pysquared/: beacon.py  logger.py
circuitpython-workspaces/flight-software/src/pysquared/file_validation/: __init__.py
circuitpython-workspaces/flight-software/src/pysquared/file_validation/manager/: __init__.py  file_validation.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/load_switch/: __init__.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/load_switch/manager/: __init__.py  loadswitch_manager.py
circuitpython-workspaces/flight-software/src/pysquared/protos/: loadswitch.py
circuitpython-workspaces/flight-software/src/pysquared/rtc/manager/: rv3028.py
circuitpython-workspaces/ground-station/: pyproject.toml
circuitpython-workspaces/ground-station/src/ground_station/: __init__.py  ground_station.py
cpython-workspaces/: pyrightconfig.json
cpython-workspaces/flight-software-mocks/: pyproject.toml
cpython-workspaces/flight-software-mocks/src/mocks/: __init__.py
cpython-workspaces/flight-software-mocks/src/mocks/adafruit_lsm6ds/: lsm6dsox.py
cpython-workspaces/flight-software-mocks/src/mocks/adafruit_rfm/: rfm9x.py  rfm9xfsk.py
cpython-workspaces/flight-software-mocks/src/mocks/circuitpython/: digitalio.py
cpython-workspaces/flight-software-mocks/src/mocks/proves_sx126/: sx1262.py
cpython-workspaces/flight-software-mocks/src/mocks/proves_sx1280/: sx1280.py
cpython-workspaces/flight-software-unit-tests/: pyproject.toml
cpython-workspaces/flight-software-unit-tests/src/unit-tests/: test_beacon.py  test_binary_encoder.py  test_cdh.py  test_config.py  test_detumble.py  test_logger.py  test_power_health.py  test_sleep_helper.py  test_watchdog.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/boot/: test_filesystem.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/: test_burnwire.py  test_busio.py  test_digitalio.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/burnwire/manager/: test_burnwire.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/imu/manager/: test_lsm6dsox_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/light_sensor/manager/: test_veml7700_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/load_switch/manager/: test_loadswitch_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/magnetometer/manager/: test_lis2mdl_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/power_monitor/manager/: test_ina219_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/radio/manager/: test_radio_base.py  test_rfm9x_manager.py  test_sx126x_manager.py  test_sx1280_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/radio/packetizer/: test_packet_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/sd_card/manager/: test_sd_card.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/temperature_sensor/manager/: test_mcp9808_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/nvm/: test_counter.py  test_flag.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/rtc/manager/: test_microcontroller_manager.py  test_rv3028_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/sensor_reading/: test_acceleration.py  test_avg.py  test_current.py  test_error.py  test_gyro.py  test_light.py  test_lux.py  test_magnetic.py  test_reading_base.py  test_temperature.py  test_voltage.py
docs/: api.md  contributing.md  design-guide.md  dev-guide-windows.md  dev-guide.md  getting-started.md  load_switch.md  radio-test.md
mocks/: rv3028.py
mocks/adafruit_ina219/: ina219.py
mocks/adafruit_lis2mdl/: lis2mdl.py
mocks/adafruit_lsm6ds/: lsm6dsox.py
mocks/adafruit_mcp9808/: mcp9808.py
mocks/adafruit_rfm/: rfm9x.py  rfm9xfsk.py  rfm_common.py
mocks/circuitpython/: busio.py  byte_array.py  digitalio.py  microcontroller.py  rtc.py
mocks/proves_sx126/: sx1262.py  sx126x.py
mocks/proves_sx1280/: sx1280.py
pysquared/: Big_Data.py  beacon.py  cdh.py  detumble.py  functions.py  logger.py  mkdocs.yml  packet_manager.py  packet_sender.py  power_health.py  pysquared.py  satellite.py  sleep_helper.py  watchdog.py
pysquared/config/: config.py  radio.py
pysquared/docs/: busio.md  cdh.md  config.md  counter.md  decorators.md  detumble.md  digitalio.md  flag.md  functions.md  index.md  logger.md  packet_manager.md  packet_sender.md  radio.md  requirements.txt  satellite.md  sleep_helper.md  watchdog.md
pysquared/hardware/: busio.py  decorators.py  digitalio.py
pysquared/hardware/radio/: modulation.py
pysquared/hardware/rfm9x/: factory.py  manager.py
pysquared/nvm/: counter.py  flag.py
pysquared/protos/: burnwire.py  imu.py  light_sensor.py  magnetometer.py  power_monitor.py  radio.py  rtc.py  temperature_sensor.py
pysquared/repl/: radio_test.py
pysquared/rtc/manager/: microcontroller.py  rv3028.py
pysquared/sensor_reading/: base.py  light.py  lux.py  temperature.py
tests/unit/: test_beacon.py  test_cdh.py  test_config.py  test_detumble.py  test_file_validation.py  test_logger.py  test_power_health.py  test_sleep_helper.py  test_watchdog.py
tests/unit/files/: config.test.json
tests/unit/hardware/: test_burnwire.py  test_busio.py  test_digitalio.py
tests/unit/nvm/: test_counter.py  test_flag.py
tests/unit/other/: other_test_config.py
tests/unit/sensor_reading/: test_light.py  test_lux.py  test_magnetic.py  test_temperature.py
typings/: micropython.pyi
(+21 files in other folders)
