[project]
name = "pysquared"
version = "2.0.0"
description = "Flight Software for the PROVES Kit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-ina219==3.4.26",
    "adafruit-circuitpython-asyncio @ git+https://github.com/adafruit/adafruit_circuitpython_asyncio@1.3.3",
    "adafruit-circuitpython-drv2605==1.3.4",
    "adafruit-circuitpython-lis2mdl==2.1.23",
    "adafruit-circuitpython-lsm6ds==4.5.13",
    "adafruit-circuitpython-mcp9808==3.3.24",
    "adafruit-circuitpython-neopixel==6.3.12",
    "adafruit-circuitpython-register==1.10.4",
    "adafruit-circuitpython-rfm==1.0.6",
    "adafruit-circuitpython-tca9548a @ git+https://github.com/proveskit/Adafruit_CircuitPython_TCA9548A@1.0.0",
    "adafruit-circuitpython-ticks==1.1.1",
    "adafruit-circuitpython-veml7700==2.0.2",
    "proves-circuitpython-rv3028 @ git+https://github.com/proveskit/PROVES_CircuitPython_RV3028@1.0.1",
    "proves-circuitpython-sx126 @ git+https://github.com/proveskit/micropySX126X@1.0.0",
    "proves-circuitpython-sx1280 @ git+https://github.com/proveskit/CircuitPython_SX1280@1.0.4",
]

[dependency-groups]
dev = [
    "adafruit-circuitpython-typing==1.12.1",
    "circuitpython-stubs==9.2.8",
    "coverage==7.9.1",
    "freezegun>=1.5.2",
    "pre-commit==4.2.0",
    "pyright[nodejs]==1.1.402",
    "pytest==8.4.1",
    "mkdocs-material==9.6.14",
    "mkdocstrings[python]==0.29.1",
    "mkdocs-section-index==0.3.10",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-minify-plugin==0.7.1",
]

[tool.setuptools]
packages = [
    "pysquared",
    "pysquared.config",
    "pysquared.hardware",
    "pysquared.hardware.imu",
    "pysquared.hardware.imu.manager",
    "pysquared.hardware.magnetometer",
    "pysquared.hardware.magnetometer.manager",
    "pysquared.hardware.radio",
    "pysquared.hardware.radio.manager",
    "pysquared.hardware.radio.packetizer",
    "pysquared.hardware.power_monitor",
    "pysquared.hardware.power_monitor.manager",
    "pysquared.hardware.burnwire",
    "pysquared.hardware.burnwire.manager",
    "pysquared.nvm",
    "pysquared.protos",
    "pysquared.rtc",
    "pysquared.rtc.manager"
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
include = [
    "pysquared/**/*.py",
]

[tool.coverage.html]
directory = ".coverage-reports/html"

[tool.coverage.xml]
output = ".coverage-reports/coverage.xml"

[tool.pyright]
include = ["pysquared"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
